<resources>
    <string name="app_name">Mind Mingle</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_message">Type your message...</string>
    <string name="worry">Расскажите, что вас сегодня волнует...</string>
    <string name="add_note">Добавить заметку</string>
    <string name="search_here">Search here...</string>
    <string name="_1">1. Большинство людей ответят грубостью на грубость.</string>
    <string name="answer1">практически всегда;</string>
    <string name="answer2">часто;</string>
    <string name="answer3">иногда;</string>
    <string name="answer4">случайно;</string>
    <string name="answer5">очень редко.</string>
    <string name="nextq">Следующий вопрос</string>
    <string name="_2">2. Большинство людей не верят во что-либо новое до тех пор, пока не испытают это на себе.</string>
    <string name="itog">Итог</string>
    <string name="closetest">Завершить тест</string>
    <string name="_3">3. Тот, кто полностью доверят другим людям, часто находится в затруднительном положении.</string>
    <string name="_4">4. Большинство людей работают в полную силу только в том случае, если их заставляют это делать.</string>
    <string name="_5">5. Даже самые отвратительные преступники имеют хоть капельку приличия.</string>
    <string name="q14">Часто ли вы чувствуете, что несправедливость окружает вас?</string>
    <string name="ay">да</string>
    <string name="an">нет</string>
    <string name="q24">Вас часто беспокоит будущее?</string>
    <string name="q34">У вас бывают проблемы с засыпанием из-за беспокойств?</string>
    <string name="q44">Вы чувствуете себя уставшим даже после ночного сна?</string>
    <string name="q54">Часто ли вы чувствуете себя раздраженным или напряженным?</string>
    <string name="q21">Вы неожиданно добились успеха у того, кто у Вас вызывает антипатию. Изменится ли у Вас мнение об этом человеке, станет ли он Вам более приятен?.</string>
    <string name="q22">Сможете ли Вы увлечь своей идеей человека, разговаривая с ним лишь по телефону?</string>
    <string name="q23">Прислушиваетесь ли Вы в спорах к мнению, с которым не согласны?</string>
    <string name="q42">Были ли Вы в детстве всеобщем любимицем – и детей и взрослых?</string>
    <string name="q52">Вы любите смотреться в зеркало?</string>
    <string name="q62">Часто ли Вы слышите комплименты в свой адрес, причем бескорыстные и искренние?</string>
    <string name="q72">Умеете ли Вы избегать неприятных вопросов, не обижая при этом собеседника?</string>
    <string name="q82">При письме Ваши строчки «ползут» вверх?</string>
    <string name="q13">Как вы думаете, большинству людей можно доверять или во взаимодействии с другими нужно соблюдать осторожность?</string>
    <string name="a13">Большинству людей можно доверять.</string>
    <string name="a23">Во взаимодействии с другими нужно соблюдать осторожность.</string>
    <string name="q32">Могли бы вы сказать, что люди чаще всего стремятся быть полезными другим или они думают только о себе?</string>
    <string name="a33">Стремятся быть полезными другим.</string>
    <string name="a43">Думают только о себе.</string>
    <string name="q33">Как вы думаете, большинство людей попытались бы обмануть вас, если бы им представилась такая возможность, или вели бы себя честно?</string>
    <string name="a53">Вели бы себя честно.</string>
    <string name="a63">Попытались бы обмануть, если бы им представилась такая возможность.</string>
    <string name="this_is_message_text">This is message text</string>
    <string name="r1t4">Высокая степень стресса: Результаты указывают на высокий уровень стресса. Рекомендуется обратиться за помощью к квалифицированному специалисту, такому как психолог или психиатр, чтобы получить поддержку и совет по управлению стрессом.</string>
    <string name="r2t4">Средняя степень стресса: Ваши ответы указывают на средний уровень стресса. Это может быть признаком того, что ваш уровень стресса находится в пределах нормы, но все же стоит обратить внимание на свои эмоциональные состояния. Постарайтесь найти способы справиться со стрессом, такие как регулярная физическая активность, медитация, глубокое дыхание или консультации с психологом.</string>
    <string name="r3t4">Низкая степень стресса: Ваши ответы указывают на низкий уровень стресса. Это хорошо, но необходимо помнить, что стресс может изменяться со временем, и важно продолжать заботиться о своем эмоциональном и психологическом благополучии. Регулярный отдых, здоровое питание, поддержание социальных связей и управление временем могут помочь поддерживать ваше хорошее самочувствие.</string>
    <string name="r1t2">Вы убеждены, что обладаете личным обаянием. Похоже, так оно и есть, но в некоторых ситуациях Вам следует самокритичнее отнестись к себе и больше уделять внимания не собственной персоне, а окружающим Вас людям.</string>
    <string name="r2t2">Нет никакого сомнения, что Вас можно назвать обаятельным человеком. Вы приятны в общении, у Вас есть чувство собственного достоинства. Вы не станете менять своих убеждений и характера только для того, чтобы заставить обожать себя кого-либо.</string>
    <string name="r3t2">Вы не являетесь всеобщем любимцем лишь потому, что держите обаяние в себе. Вероятно, это происходит потому, что Вы очень нерешительный человек, из-за неуверенности в собственных силах Вы не в состоянии убедить в своей правоте окружающих, даже если правда на Вашей стороне.</string>
    <string name="r4t2">Вы лишены обаяния прежде всего потому, что не любите саму себя. Чаще смотритесь в зеркало и учитесь замечать свои достоинства. Недостатки, которые можно исправить, исправляйте, а которые нельзя подвергнуть изменению, превращайте в достоинства, в Вашу «изюминку». В общении с окружающими старайтесь держаться с чувством собственного достоинства</string>
    <string name="r1t3">У вас высокий показатель доверия</string>
    <string name="r2t3">У вас средний показатель доверия</string>
    <string name="r3t3">У вас низкий показатель доверия</string>
    <string name="r1t1">высокий показатель;</string>
    <string name="r2t1">средний показатель с тенденцией к высокому;</string>
    <string name="r3t1">средний показатель с тенденцией к низкому;</string>
    <string name="r4t1">низкий показатель.</string>
    <string name="t1tf">Тест 1</string>
    <string name="t11tf">Диагностика манипулятивного отношения</string>
    <string name="t2tf">Тест 2</string>
    <string name="t22tf">Обладаете ли Вы обаянием?</string>
    <string name="t3tf">Тест 3</string>
    <string name="t33tf">Шкала доверия М. Розенберга</string>
    <string name="t4tf">Тест 4</string>
    <string name="t44tf">Психологический тест на определение уровня стресса</string>
    <string name="pause">Пауза</string>
    <string name="inhale">Вдох</string>
    <string name="exhale">Выдох</string>
    <string name="press">Нажми</string>
</resources>