<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottomnav.tests.SecondTestFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/gr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q21" />

            <RadioButton
                android:id="@+id/br1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ay" />

            <RadioButton
                android:id="@+id/br2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an" />

            <Button
                android:id="@+id/bn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextq"
                android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q22" />

            <RadioButton
                android:id="@+id/br1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ay" />

            <RadioButton
                android:id="@+id/br2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an" />


            <Button
                android:id="@+id/bn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextq"
                android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q23" />

            <RadioButton
                android:id="@+id/br1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ay" />

            <RadioButton
                android:id="@+id/br2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an" />

            <Button
                android:id="@+id/bn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextq"
                android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gr4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q42" />

            <RadioButton
                android:id="@+id/br1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ay" />

            <RadioButton
                android:id="@+id/br2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an" />

            <Button
                android:id="@+id/bn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextq"
                android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gr5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q52" />

            <RadioButton
                android:id="@+id/br1_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ay" />

            <RadioButton
                android:id="@+id/br2_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an" />

            <Button
                android:id="@+id/bn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextq"
                android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gr6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q62" />

            <RadioButton
                android:id="@+id/br1_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ay" />

            <RadioButton
                android:id="@+id/br2_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an" />

            <Button
                android:id="@+id/bn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextq"
                android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gr7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/vt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q72" />

        <RadioButton
            android:id="@+id/br1_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ay" />

        <RadioButton
            android:id="@+id/br2_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an" />

        <Button
            android:id="@+id/bn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextq"
            android:textSize="20sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gr8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q82" />

            <RadioButton
                android:id="@+id/br1_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ay" />

            <RadioButton
                android:id="@+id/br2_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an" />


        </RadioGroup>


        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/closetest"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.179"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gr8" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:text="@string/itog"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>